Queries being planned with the subplanner can ignore when the PlanExecutor is killed

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • Query 17 (07/15/16), Query 18 (08/05/16)
    • 0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      We still try to plan the query if planning for any of the subqueries returned an error status. This leads us to ignore the "PlanExecutor killed during plan selection" operation failed status that is returned by the MultiPlanStage and still try to build stages when the collection and indexes no longer exist.

      // Use the multi plan stage to select a winning plan for each branch, and then construct
      // the overall winning plan from the resulting index tags.
      Status subplanSelectStat = choosePlanForSubqueries(yieldPolicy);
      if (!subplanSelectStat.isOK()) {
          return choosePlanWholeQuery(yieldPolicy);
      }
      

            Assignee:
            Max Hirschhorn
            Reporter:
            Max Hirschhorn
            Votes:
            1 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: