SERVER-24761 Abort entire query plan when a catalog operation occurs.

Plan execution cannot proceed if the collection or a candidate index was
dropped during a yield. This prevents the subplanner from trying to
build plan stages when the collection and indexes no longer exist.