src/mongo/db/exec/cached_plan.cpp
@@ -183,7 +183,7 @@ Status CachedPlanStage::tryYield(PlanYieldPolicy* yieldPolicy) {
         bool alive = yieldPolicy->yield(_fetcher.get());
 
         if (!alive) {
-            return Status(ErrorCodes::OperationFailed,
+            return Status(ErrorCodes::QueryPlanKilled,
                           "CachedPlanStage killed during plan selection");
         }
     }
