src/mongo/db/exec/cached_plan.h
@@ -110,7 +110,8 @@ private:
     /**
      * May yield during the cached plan stage's trial period or replanning phases.
      *
-     * Returns a non-OK status if the plan was killed during a yield.
+     * Returns a non-OK status if query planning fails. In particular, this function returns
+     * ErrorCodes::QueryPlanKilled if the query plan was killed during a yield.
      */
     Status tryYield(PlanYieldPolicy* yieldPolicy);
 
